--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.efar.WelcomeActivity"
+            android:name="com.mobile.efar.WelcomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
@@ -23,6 +23,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity 
+            android:name="com.mobile.efar.HomeActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
